[project]
name = "iban-tools"
version = "0.1.0"
description = "A comprehensive Python toolkit for IBAN validation, extraction, generation, formatting, parsing, and BIC lookup."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Adem"}
]
keywords = ["iban", "bic", "swift", "banking", "finance", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iban_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
